--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     
     <header class="display-flex header-wraper">
         <ul class="display-flex nav-menu">
-            <img src="" alt="">
             <li>Contacto
                 <a href="#section1"></a>
             </li>
@@ -60,9 +59,9 @@
 </article>
 
 <section class="display-flex1 section-wraper socialnet">
-    <img class="mail" src="C:\Users\ranse\Downloads\proyecto-1-cod-latam\proyecto-1-cod-latam\img\mail.png" alt="Icono de mail">
-    <img class="github" src="C:\Users\ranse\Downloads\proyecto-1-cod-latam\proyecto-1-cod-latam\img\github.png" alt="Icono de github">
-    <img class="linkedin" src="C:\Users\ranse\Downloads\proyecto-1-cod-latam\proyecto-1-cod-latam\img\linkedin.png" alt="Icono de linkedin">
+    <img class="mail" src="img\mail.png" alt="Icono de mail">
+    <img class="github" src="img\github.png" alt="Icono de github">
+    <img class="linkedin" src="img\linkedin.png" alt="Icono de linkedin">
 </section>
 
 <footer class="display-flex1 footer">
