--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>   
     </header>
 <div>
-    <img class="imgpres" src="https://placekitten.com/400/400" alt="gatito beio">
+    <img class="imgpres center" src="https://placekitten.com/400/400" alt="gatito beio">
 </div>
 
 <section class="section1">
